# CSAPP23

./: .gitignore  a.txt  getrusage  getrusage.cpp
code/data/: show-bytes.c
code/vm/malloc/: mm.c
exp2_BinaryBomb/: IDA Pro 快速指南.docx  Readme.txt  X86汇编指令速查.xlsx  bomb.exe.idb  bomb.idb  bomb_001015.txt  bomb_042019.txt  bomb_linux  cal.py  export_results.txt  process.py  计算机系统-实验2.pptx
exp3.2_BufBomb/: Readme.txt  bufbomb.c  bufbomb_linux  计算机系统原理-实验3.pptx
exp3_BufBomb/: 001015.txt  Readme.txt  bufbomb.c  bufbomb.c.bak  bufbomb.exe.idb  bufbomb_linux  bufbomb_stack.xlsx  test.c  test.c.bak
exp4_Y86_64_sim/: fenzhiyuce.py  sum.txt  test.c  test.py  test.toy  test.toy2  test2.c  toy.py  toy2.py  utils.py  y86_64_as.py  y86_64_comp.py  y86_64_pipesim.py  y86_64_sim.py  y86_64_test.txt
exp4_Y86_64_sim/temp/: enum_py.py  new_pipeline_sim.py  process.py  tes_threads.py  y86_64_pipe2.py  y86_64_pipesim.py
exp4_Y86_64_sim/y86_64_pipeline_sim/: classes.py  coe_test.coe  lines2coe.py  main.py  sum.coe  sum.txt  utils.py  y86_64_sim.py  y86_64_sim.py.md  y86_64_test.txt
exp4_Y86_64_sim/y86_64_pipeline_sim/.spyproject/config/: workspace.ini
exp4_Y86_64_sim/y86_64_pipeline_sim/.spyproject/config/backups/: workspace.ini.bak
exp5_branch_predictor/code/: Makefile  Readme.txt  batchrun.sh  bt9.c  common.h  gmon.out  main.c  predictor  predictor.c  predictor_10bit.c  predictor_1bit.c  predictor_2bit.c  predictor_3bit.c  predictor_add.c  predictor_and.c  predictor_ghr  predictor_ghr.c  predictor_ghr_hash.c  predictor_idfsm.c  predictor_lht.c  predictor_lht_ghr  predictor_lht_ghr.c  predictor_or.c  predictor_tage  predictor_tage.c  predictor_tage2.c  predictor_tage3.c  test.sh  zlibstat-win32.lib  zlibstat-win64.lib
exp5_branch_predictor/code/results/: mispred_predictor.xlsx  mispred_predictor_10bit.xlsx  mispred_predictor_1bit.xlsx  mispred_predictor_2bit.xlsx  mispred_predictor_3bit.xlsx  mispred_predictor_add.xlsx  mispred_predictor_and.xlsx  mispred_predictor_ghr.xlsx  mispred_predictor_idfsm.xlsx  mispred_predictor_lht.xlsx  mispred_predictor_lht_ghr.xlsx  mispred_predictor_or.xlsx  mispred_predictor_tage.xlsx  mispred_predictor_tage2.xlsx  mispredpredictor.xlsx  outprocess.py  output.xlsx  predictor.out  predictor_10bit.out  predictor_1bit.out  predictor_2bit.out  predictor_3bit.out  predictor_add.out  predictor_and.out  predictor_idfsm.out  predictor_lht.out  predictor_lht_ghr.out  predictor_or.out  predictor_tage2.out  process_all_out.py  results.xlsx  results_all.xlsx  test_pd2xlsx.py
exp5_branch_predictor/code/traces/: bw_mem_cp-build_1GBpgsz_16KBmem_a32_gcc49.bt9.trace
exp6_program_optimization/: 实验6.docx  计算机系统原理-实验6.pptx
exp6_program_optimization/matrix/: Makefile  clock.c  clock.h  gmon.out  lsquare.c  lsquare.h  matrix  rowcol.h  rowcol_202102001015.c  rowcol_test.c
exp6_program_optimization/matrix/windows/: clock.c  clock.h
exp6_program_optimization/poly/: Makefile  clock.h  cpe.c  cpe.h  fcyc.c  fcyc.h  poly  poly.c.bak  poly.h  poly.s  poly_202102001015.c  poly_test.c
exp7_Cache/: .gdbinit0  .gdbinit1  Cache_Instruction  Cache_L2  Cache_direct_map  Cache_direct_map_l16  Cache_direct_map_l32  Cache_direct_map_l64  Cache_set_associative_2  Cache_set_associative_32  Cache_set_associative_4  Cache_set_associative_8  Cache_victim  Makefile  Readme.txt  hhw-Cache.tar.xz  res.txt  run.sh
exp7_Cache/MyCache/: MyCache.sln  MyCache.vcxproj
exp7_Cache/cbsl/: CMakeLists.txt  LICENSE  README.md  references.md
exp7_Cache/cbsl/benchmarks/: CMakeLists.txt  config.h.in  deserialize.c  serialize.c
exp7_Cache/cbsl/examples/: CMakeLists.txt  recommend_usage.c  simple_usage.c
exp7_Cache/cbsl/include/: CMakeLists.txt  cbsl.h  cbsl_config.h  cbsl_config.h.in
exp7_Cache/cbsl/src/: CMakeLists.txt  buffer.c  cbsl_internal.h  file.c  flush.c  fortran_bindings.f90.in  gen_fortran_bindings.cmake  read.c  record.c  utils.c  write.c
exp7_Cache/cbsl/tests/: CMakeLists.txt  cbsl_record.c  cbsl_record_array.c  fortran_bindings.f90  multi_array.c  scalar_data.c  single_array.c  split_compression.c  utility.c  variable_size_array.c  various_size_array.c
exp7_Cache/src/: CacheHelper.c  Cache_Instruction.c  Cache_L2.c  Cache_direct_map_l16.c  Cache_direct_map_l32.c  Cache_direct_map_l64.c  Cache_set_associative_2.c  Cache_set_associative_32.c  Cache_set_associative_4.c  Cache_set_associative_8.c  Cache_victim.c  common.h  getopt.c  getopt.h  uthash.h
exp7_Cache/traces/: dave.trace.zst  long.trace.zst  trans.trace.zst  yi.trace.zst  yi2.trace.zst
exp8_malloc/: Makefile  Readme.txt  clock.c  clock.h  config.h  fcyc.c  fsecs.c  getopt.c  malloc_book  malloc_oringin  mdriver.c  memlib.c  memlib.h  mm.h  mm_book.c  mm_oringin.c
exp8_malloc/myMalloc/: myMalloc.sln  myMalloc.vcxproj
exp8_malloc/traces/: TRACE_LIST.txt
